# metallic-rs

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
benches/: f32_exp.rs
benches/f32/: acos.rs  acosh.rs  asin.rs  asinh.rs  atan.rs  atanh.rs  cbrt.rs  cos.rs  cosh.rs  exp.rs  exp10.rs  exp2.rs  exp_m1.rs  frexp.rs  hypot.rs  ldexp.rs  ln.rs  ln_1p.rs  log.rs  log10.rs  log2.rs  main.rs  powf.rs  round.rs  sin.rs  sin_cos.rs  sinh.rs  tan.rs  tanh.rs
convert-wc/: Cargo.toml  README.md
convert-wc/src/: main.rs
src/: lib.rs
src/f32/: kernel.rs  mod.rs
src/f64/: mod.rs
tests/: f32.rs
tests/f32/: hypot.wc  ldexp.rs  main.rs  x87.rs
tests/f32/huge/: hypotf.wc  mod.rs
