[package]
name = "metallic"
version = "0.1.1"
authors = ["Chen-Pang He (https://jdh8.org)"]
edition = "2021"
description = "C math functions from scratch"
repository = "https://github.com/jdh8/metallic-rs"
license = "MIT"
categories = ["mathematics"]
keywords = ["floating-point", "trigonometry", "exponential", "logarithm", "special-functions"]
exclude = ["/tests/*/huge"]

[dependencies]
fast_polynomial = "0.3.0"

[dev-dependencies]
core-math = "0.1.1"
criterion = "0.5.1"
hexf-parse = "0.2.1"
libm = "0.2.8"
rand = "0.8.5"
regex = "1.10.6"

[profile.dev]
opt-level = 3

[[bench]]
name = "f32"
harness = false
