[package]
name = "convert-wc"
version = "0.1.0"
authors = ["Chen-Pang He (https://jdh8.org)"]
edition = "2021"
description = "Compile textual worst case files (.wc) into binary ones"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
hexf-parse = "0.2.1"
regex = "1.10.6"
